Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74276

Segfault with basic SplitView example

    XMLWordPrintable

Details

    • macOS
    • e8b3db1bedf1c62f810d26d17ce91a687448bcc4 (qt/qtquickcontrols2/dev)

    Description

      import QtQuick 2.13
      import QtQuick.Controls 2.13
      
      ApplicationWindow {
          objectName: "window"
          width: 400
          height: 400
          visible: true
      
          SplitView {
              objectName: "splitView"
              anchors.fill: parent
      
              SplitView.preferredWidth: 240
          }
      }
      
      22:02:41: Starting /Users/mitch/dev/temp/quick-qt5_13_fw-Debug/quick.app/Contents/MacOS/quick...
      QML debugging is enabled. Only use this in a safe environment.
      AddressSanitizer:DEADLYSIGNAL
      =================================================================
      ==82618==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000008 (pc 0x0001139b9e82 bp 0x7ffeeb9bd730 sp 0x7ffeeb9bd680 T0)
      ==82618==The signal is caused by a READ memory access.
      ==82618==Hint: address points to the zero page.
          #0 0x1139b9e81 in QQuickSplitViewAttached::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (QtQuickTemplates2:x86_64+0x146e81)
          #1 0x107b4bf5a in QQmlObjectCreator::setPropertyValue(QQmlPropertyData const*, QV4::CompiledData::Binding const*) (QtQml:x86_64+0x8eaf5a)
          #2 0x107b44d6f in QQmlObjectCreator::setPropertyBinding(QQmlPropertyData const*, QV4::CompiledData::Binding const*) (QtQml:x86_64+0x8e3d6f)
          #3 0x107b416df in QQmlObjectCreator::setupBindings(bool) (QtQml:x86_64+0x8e06df)
          #4 0x107b57d35 in QQmlObjectCreator::populateInstance(int, QObject*, QObject*, QQmlPropertyData const*) (QtQml:x86_64+0x8f6d35)
          #5 0x107b43e99 in QQmlObjectCreator::setPropertyBinding(QQmlPropertyData const*, QV4::CompiledData::Binding const*) (QtQml:x86_64+0x8e2e99)
          #6 0x107b416df in QQmlObjectCreator::setupBindings(bool) (QtQml:x86_64+0x8e06df)
          #7 0x107b57d35 in QQmlObjectCreator::populateInstance(int, QObject*, QObject*, QQmlPropertyData const*) (QtQml:x86_64+0x8f6d35)
          #8 0x107b3d43c in QQmlObjectCreator::createInstance(int, QObject*, bool) (QtQml:x86_64+0x8dc43c)
          #9 0x107b4363a in QQmlObjectCreator::setPropertyBinding(QQmlPropertyData const*, QV4::CompiledData::Binding const*) (QtQml:x86_64+0x8e263a)
          #10 0x107b416df in QQmlObjectCreator::setupBindings(bool) (QtQml:x86_64+0x8e06df)
          #11 0x107b57d35 in QQmlObjectCreator::populateInstance(int, QObject*, QObject*, QQmlPropertyData const*) (QtQml:x86_64+0x8f6d35)
          #12 0x107b3d43c in QQmlObjectCreator::createInstance(int, QObject*, bool) (QtQml:x86_64+0x8dc43c)
          #13 0x107b39546 in QQmlObjectCreator::create(int, QObject*, QQmlInstantiationInterrupt*) (QtQml:x86_64+0x8d8546)
          #14 0x107971f39 in QQmlComponentPrivate::beginCreate(QQmlContextData*) (QtQml:x86_64+0x710f39)
          #15 0x1079714f9 in QQmlComponent::create(QQmlContext*) (QtQml:x86_64+0x7104f9)
          #16 0x107b1c879 in QQmlApplicationEnginePrivate::finishLoad(QQmlComponent*) (QtQml:x86_64+0x8bb879)
          #17 0x107b1c60c in QQmlApplicationEnginePrivate::startLoad(QUrl const&, QByteArray const&, bool) (QtQml:x86_64+0x8bb60c)
          #18 0x107b1e0d5 in QQmlApplicationEngine::load(QUrl const&) (QtQml:x86_64+0x8bd0d5)
          #19 0x104241710 in main main.cpp:38
          #20 0x7fff6d148ed8 in start (libdyld.dylib:x86_64+0x16ed8)
      
      ==82618==Register values:
      rax = 0x0000000000000008  rbx = 0x00007ffeeb9bd6c0  rcx = 0x0000100000000001  rdx = 0x0000000000000003  
      rdi = 0x0000610000051f40  rsi = 0x0000000000000002  rbp = 0x00007ffeeb9bd730  rsp = 0x00007ffeeb9bd680  
       r8 = 0x0000000000000000   r9 = 0x0000000000000000  r10 = 0x00001fffdd737ad0  r11 = 0x0000100000000000  
      r12 = 0x00007ffeeb9bdc50  r13 = 0x0000000000000002  r14 = 0x00007ffeeb9bd680  r15 = 0x0000000000000002  
      AddressSanitizer can not provide additional info.
      SUMMARY: AddressSanitizer: SEGV (QtQuickTemplates2:x86_64+0x146e81) in QQuickSplitViewAttached::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)
      ==82618==ABORTING
      22:02:42: The program has unexpectedly finished.
      22:02:42: The process was ended forcefully.
      22:02:42: /Users/mitch/dev/temp/quick-qt5_13_fw-Debug/quick.app/Contents/MacOS/quick crashed.
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mitch_curtis Mitch Curtis
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes